add image formating

--- a/index.html
+++ b/index.html
@@ -16,31 +16,31 @@
             <div class="table-of-contents"> Table of Contents </div>
             <ul>
                <li class="selected">
-                  <a href="#">My Story</a>
+                  <a href="#my-story">My Story</a>
                </li>
                <li>
-                  <a href="#">Priming</a>
+                  <a href="#priming">Priming</a>
                </li>
                <li>
-                  <a href="#">Enter Framer</a>
+                  <a href="#enter-framer">Enter Framer</a>
                </li>
                <li>
-                  <a href="#">For the no-coders. Framer is for you.</a>
+                  <a href="#for-the-no-coders">For the no-coders. Framer is for you.</a>
                </li>
                <li>
-                  <a href="#">For the code-saavy. Framer is for you.</a>
+                  <a href="#for-the-coders">For the code-saavy. Framer is for you.</a>
                </li>
                <li>
-                  <a href="#">My Sweet Spot: How Our Team is Using Framer</a>
+                  <a href="#sweet-spot">My Sweet Spot: How Our Team is Using Framer</a>
                </li>
                <li>
-                  <a href="#">Figma</a>
+                  <a href="#figma">Figma</a>
                </li>
                <li>
-                  <a href="#">My Framer Desktop</a>
+                  <a href="#framer-desktop">My Framer Desktop</a>
                </li>
                <li>
-                  <a href="#">Tight Developer Schedule</a>
+                  <a href="#tight-developer">Tight Developer Schedule</a>
                </li>
             </ul>
          </div>
@@ -63,7 +63,7 @@
             building things.” — Frankly, I'm not sure why “playing around” and “building things” have to be mutually
             exclusive. </p>
          <p>Are we talking about the same product?</p>
-         <h3>My Story</h3>
+         <h3 id="my-story">My Story</h3>
          <p> Before Framer, we were using <a href="http://invision.com" target="_blank">Invision</a> for prototyping. At
             best, this experience felt clunky. I was taking static images, creating hot spots, and linking them
             together. If anything, it demonstrated how screens were linked together. But, during pitches, there was
@@ -72,7 +72,7 @@
          <p>While this worked for some clients, others still had trouble making that leap, however big or small. There
             was even a fair amount of redesigning once developers got involved. “Oh, I didn't realize that's what you
             meant.”</p>
-         <h3>Priming</h3>
+         <h3 id="priming">Priming</h3>
          <div class="image-text-wrapper">
             <div class="image-text-wrapper__image">
                <img src="./images/design-details.jpeg" alt="Design Details" />
