--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>17 - Table of Contents || Advent of CSS</title>
    <link rel="stylesheet" href="./styles.css" />
+   <script src='main.js' defer></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
       <aside>
          <div>
             <div class="table-of-contents"> Table of Contents </div>
-            <ul>
+            <ul id="menu-list">
                <li class="selected">
                   <a href="#my-story">My Story</a>
                </li>
